[tool.poetry]
name = "optical-flow-testing"
version = "0.1.0"
description = ""
authors = ["Joshua Maldonado <joshjm9915@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
opencv-python = "^4.5.4"
opencv-contrib-python = "^4.5.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
